fix: scrollbars

--- a/src/styles/artistPage.scss
+++ b/src/styles/artistPage.scss
@@ -69,7 +69,6 @@
         height: 100%;
         display: flex;
         flex-direction: column;
-        overflow-y: scroll;
 
         @media (max-width: 920px) {
           width: 100%;
@@ -82,19 +81,29 @@
           flex-shrink: 0;
         }
 
-          & > .gallery {
-            //flex: 0 0 50%;
-            overflow-y: scroll;
-            padding: 10px;
-            column-count: 7;
-            column-gap: 10px;
+        & > .gallery {
+          //flex: 0 0 50%;
+          overflow-y: scroll;
+          padding: 10px;
+          column-count: 7;
+          column-gap: 10px;
 
-            @media (max-width: 1200px) {
-              column-count: 5;
-            }
+          &::-webkit-scrollbar{
+            width: 5px;
+          }
 
-            @media (max-width: 1024px) {
-              column-count: 3;
+          &::-webkit-scrollbar-thumb{
+            width: 5px;
+            border-radius: 8px;
+            background-color: rgba(255, 255, 255, 0.565);
+          }
+
+          @media (max-width: 1200px) {
+            column-count: 5;
+          }
+
+          @media (max-width: 1024px) {
+            column-count: 3;
           }
 
 
@@ -113,7 +122,17 @@
         & > .reviews {
           max-height: 50%;
           padding: 0 10px;
-          overflow: scroll;
+          overflow-y: scroll;
+
+          &::-webkit-scrollbar{
+            width: 5px;
+          }
+
+          &::-webkit-scrollbar-thumb{
+            width: 5px;
+            background-color: rgba(255, 255, 255, 0.565);
+            border-radius: 8px;
+          }
 
           & > h3 {
             color: $textColor200;
@@ -143,6 +162,16 @@
           max-height: 95%;
           padding: 5px;
           overflow-y: scroll;
+
+          &::-webkit-scrollbar{
+            width: 5px;
+          }
+
+          &::-webkit-scrollbar-thumb{
+            width: 5px;
+            background-color: rgba(255, 255, 255, 0.565);
+            border-radius: 8px;
+          }
 
           @media (max-width: 920px) {
             display: grid;
