--- a/src/styles/gusetModal.scss
+++ b/src/styles/gusetModal.scss
@@ -21,121 +21,137 @@
   gap: 2rem;
   flex-wrap: wrap;
 
-    .left {
-      flex: 1 1 40%;
-      img {
-        width: 100%;
-        height: 72%;
-        border-radius: 12px;
-        margin-bottom: 1rem;
-        object-fit: cover;
+  &::-webkit-scrollbar{
+    width: 5px;
+  }
 
-        @media (max-width: 750px) {
-          width: 70%;
-        }
+  &::-webkit-scrollbar-thumb{
+    width: 5px;
+    background-color: rgba(51, 51, 51, 0.565);
+    border-radius: 8px;
+  }
 
-        @media (max-width: 420px) {
-          width: 100%;
-        }
+  .left {
+    flex: 1 1 40%;
+    img {
+      width: 100%;
+      height: 72%;
+      border-radius: 12px;
+      margin-bottom: 1rem;
+      object-fit: cover;
+
+      @media (max-width: 750px) {
+        width: 70%;
       }
 
-      .info {
-
-        h3 {
-          font-size: 24px;
-          margin-bottom: 0.5rem;
-          font-family: Oswald, sans-serif;
-        }
-
-        & > div{
-          display: flex;
-          flex-direction: column;
-          gap: 5px;
-
-          p{
-            font-family: Oswald, sans-serif;
-            font-size: 16px;
-          }
-        }
+      @media (max-width: 420px) {
+        width: 100%;
       }
     }
 
-    .right {
-      flex: 1 1 55%;
-      display: flex;
-      flex-direction: column;
+    .info {
 
-      .gallery {
-        height: auto;
-        //border: 1px solid red;
-        h4 {
-          margin-bottom: 0.5rem;
-          font-family: Oswald, sans-serif;
-        }
-
-        @media (max-width: 450px) {
-          margin-top: 30px;
-        }
-
-        .galleryMasonry {
-          column-count: 4;
-          column-gap: 10px;
-          max-height: 400px;
-          overflow-y: auto;
-          padding-right: 6px;
-
-          /* Optional scrollbar styling */
-          scrollbar-width: thin;
-          scrollbar-color: #888 transparent;
-
-
-          &::-webkit-scrollbar {
-            width: 6px;
-          }
-
-          &::-webkit-scrollbar-thumb {
-            background-color: #888;
-            border-radius: 10px;
-          }
-
-          img {
-            width: 100%;
-            margin-bottom: 10px;
-            border-radius: 8px;
-            break-inside: avoid;
-            object-fit: cover;
-          }
-        }
-
-        @media (max-width: 768px) {
-          .galleryMasonry {
-            column-count: 4;
-          }
-        }
-
-        @media (max-width: 400px) {
-          .galleryMasonry {
-            column-count: 2;
-          }
-        }
+      h3 {
+        font-size: 24px;
+        margin-bottom: 0.5rem;
+        font-family: Oswald, sans-serif;
       }
 
-      .videos {
-        height: 500px;
-        overflow-y: scroll;
-        h4 {
-          margin-bottom: 0.5rem;
+      & > div{
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+
+        p{
           font-family: Oswald, sans-serif;
-
-        }
-
-        iframe {
-          margin-bottom: 1rem;
-          border-radius: 10px;
+          font-size: 16px;
         }
       }
     }
   }
+
+  .right {
+    flex: 1 1 55%;
+    display: flex;
+    flex-direction: column;
+
+    .gallery {
+      height: auto;
+      //border: 1px solid red;
+      h4 {
+        margin-bottom: 0.5rem;
+        font-family: Oswald, sans-serif;
+      }
+
+      @media (max-width: 450px) {
+        margin-top: 30px;
+      }
+
+      .galleryMasonry {
+        column-count: 4;
+        column-gap: 10px;
+        max-height: 400px;
+        overflow-y: auto;
+        padding-right: 6px;
+
+        &::-webkit-scrollbar{
+          width: 5px;
+        }
+
+        &::-webkit-scrollbar-thumb{
+          width: 5px;
+          background-color: rgba(255, 255, 255, 0.565);
+          border-radius: 8px;
+        }
+
+        img {
+          width: 100%;
+          margin-bottom: 10px;
+          border-radius: 8px;
+          break-inside: avoid;
+          object-fit: cover;
+        }
+      }
+
+      @media (max-width: 768px) {
+        .galleryMasonry {
+          column-count: 4;
+        }
+      }
+
+      @media (max-width: 400px) {
+        .galleryMasonry {
+          column-count: 2;
+        }
+      }
+    }
+
+    .videos {
+      height: 500px;
+      overflow-y: scroll;
+
+      &::-webkit-scrollbar{
+        width: 5px;
+      }
+
+      &::-webkit-scrollbar-thumb{
+        width: 5px;
+        background-color: rgba(51, 51, 51, 0.565);
+        border-radius: 8px;
+      }
+      h4 {
+        margin-bottom: 0.5rem;
+        font-family: Oswald, sans-serif;
+
+      }
+
+      iframe {
+        margin-bottom: 1rem;
+        border-radius: 10px;
+      }
+    }
+  }
+}
 
 .imageLightboxOverlay {
   position: fixed;
