--- a/src/styles/ourTeam.scss
+++ b/src/styles/ourTeam.scss
@@ -97,5 +97,15 @@
     width: 100%;
     max-height: 1040px;
     overflow-y: scroll;
+
+    &::-webkit-scrollbar{
+      width: 5px;
+    }
+
+    &::-webkit-scrollbar-thumb{
+      width: 5px;
+      background-color: rgba(255, 255, 255, 0.565);
+      border-radius: 8px;
+    }
   }
 }
